fixes responsive spacing for collection page content

--- a/static-build/pages/test/collection.css
+++ b/static-build/pages/test/collection.css
@@ -18,10 +18,19 @@
 }
 
 .collectionSummary {
-  max-width: var(--pageMax);
-  margin: 0 auto var(--spacing-6);
+  margin: 0 0 var(--spacing-6);
+
   & > p {
     margin: var(--spacing-3) 0;
+  }
+
+  @media (min-width: 480px) {
+    margin: 0 var(--spacing-3) var(--spacing-6);
+  }
+
+  @media (min-width: 822px) {
+    margin: 0 auto var(--spacing-6);
+    width: var(--pageMax);
   }
 }
 
